**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-28

* bam models could fail if a penalty matrix was 1 by 1, or if multiple 
  penalties on a smooth were in fact seperable into single penalties. 
  Fixed. Thanks to Martijn weiling for reporting.

* Constant in tps basis computation was different to published version 
  for odd dimensions - makes no difference to fit, but annoying if you 
  are trying to test a re-implementation. Thanks to Weijie Cai at SAS. 

* prediction for "cc" and "cp" classes is now cyclic - values outside the
  range of knots are wrapped back into the interval.

* ldTweedie now returns derivatives w.r.t. p as well as w.r.t scale 
  parameter phi.

* gamm can now handle 'varComb' variance functions (thanks Sven Neulinger
  for reporting that it didn't).

* fix of a bug which could cause bam to seg fault for a model with no smooths 
  (insufficient storage allocated in C in this case). Thanks Martijn Weiling.

1.7-27

* Further multi-threading in gam fits - final two leading order matrix
  operations parallelized using openMP. 

* Export of smooth.construct.t2.smooth.spec and Predict.matrix.t2.smooth, 
  and Rrank.

* Fix of of missing [,,drop=FALSE] in predict.gam that could cause problems 
  with single row prediction when 'terms' supplied (thanks Yang Yang).

1.7-26

* Namespace fixes.

1.7-25

* code added to allow openMP based multi-threading in gam fits (see
  ?gam.control and ?"mgcv-parallel"). 

* bam now allows AR1 error model to be split blockwise. See argument 
  'AR.start'.

* magic.post.proc made more efficient (one of two O(np^2) steps removed).

* var.summary now coerces character to factor. 

* bugs fixed whereby etastart etc were not passed to initial.spg and
  get.null.coefs. Thanks to Gavin Simpson.

* reformulate removed from predict.gam to avoid (slow) repeated parser 
  calls.

* gaussian(link="log") initialization fixed so that negative data 